Fixed Jenkinsfile syntax and shared library call